<?xml version="1.0" encoding="utf-8"?>

<!--
   ~
   ~    Lens Transposition - Flat Transposition Calculator
   ~    Copyright (C) 2020  KevinT.
   ~
   ~    This program is free software: you can redistribute it and/or modify
   ~    it under the terms of the GNU General Public License as published by
   ~    the Free Software Foundation, either version 3 of the License, or
   ~    (at your option) any later version.
   ~
   ~    This program is distributed in the hope that it will be useful,
   ~    but WITHOUT ANY WARRANTY; without even the implied warranty of
   ~    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   ~    GNU General Public License for more details.
   ~
   ~    You should have received a copy of the GNU General Public License
   ~    along with this program.  If not, see https://www.gnu.org/licenses/gpl-3.0.html.
   ~
   -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/transpositionFragment">

    <fragment
        android:id="@+id/transpositionFragment"
        android:name="com.kevintresuelo.lens.screens.TranspositionFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_transposition" >
        <action
            android:id="@+id/action_transpositionFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_transpositionFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.kevintresuelo.lens.screens.AboutFragment"
        android:label="@string/about_title" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.kevintresuelo.lens.screens.SettingsFragment"
        android:label="@string/settings_title" />
</navigation>