<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/ft_sv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.CheckerFragment">

        <LinearLayout
            android:id="@+id/ft_ll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipToPadding="false">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ft_mcv_minus_cylinder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_margin_full"
                android:layout_marginEnd="@dimen/global_margin_full"
                android:layout_marginStart="@dimen/global_margin_full"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ft_cl_minus_cylinder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/global_margin_full">

                    <TextView
                        android:id="@+id/ft_tv_minus_cylinder_title"
                        android:textAppearance="@style/TextAppearance.Lens.Overline"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:paddingBottom="@dimen/global_margin_full"
                        android:text="@string/transposition_minus_cylinder_title"
                        android:textColor="@color/color_on_surface_low" />

                    <CheckBox
                        android:id="@+id/ft_cb_minus_cylinder_enabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_tv_minus_cylinder_title"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ft_til_minus_cylinder_sphere_power"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_tv_minus_cylinder_title"
                        app:layout_constraintStart_toEndOf="@id/ft_cb_minus_cylinder_enabled"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:hint="@string/transposition_label_sphere_power"
                        app:suffixText="@string/transposition_unit_sphere_power">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ft_tiet_minus_cylinder_sphere_power"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned|numberDecimal"
                            android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ft_til_minus_cylinder_cylinder_power"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_til_minus_cylinder_sphere_power"
                        app:layout_constraintStart_toEndOf="@id/ft_cb_minus_cylinder_enabled"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/global_margin_full"
                        android:hint="@string/transposition_label_cylinder_power"
                        app:suffixText="@string/transposition_unit_cylinder_power">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ft_tiet_minus_cylinder_cylinder_power"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned|numberDecimal"
                            android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ft_til_minus_cylinder_cylinder_axis"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_til_minus_cylinder_cylinder_power"
                        app:layout_constraintStart_toEndOf="@id/ft_cb_minus_cylinder_enabled"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/global_margin_full"
                        android:hint="@string/transposition_label_axis"
                        app:prefixText="@string/transposition_unit_axis">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ft_tiet_minus_cylinder_cylinder_axis"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ft_mcv_plus_cylinder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_margin_full"
                android:layout_marginEnd="@dimen/global_margin_full"
                android:layout_marginStart="@dimen/global_margin_full"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ft_cl_plus_cylinder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/global_margin_full">

                    <TextView
                        android:id="@+id/ft_tv_plus_cylinder_title"
                        android:textAppearance="@style/TextAppearance.Lens.Overline"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:paddingBottom="@dimen/global_margin_full"
                        android:text="@string/transposition_plus_cylinder_title"
                        android:textColor="@color/color_on_surface_low" />

                    <CheckBox
                        android:id="@+id/ft_cb_plus_cylinder_enabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_tv_plus_cylinder_title"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ft_til_plus_cylinder_sphere_power"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_tv_plus_cylinder_title"
                        app:layout_constraintStart_toEndOf="@id/ft_cb_plus_cylinder_enabled"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:hint="@string/transposition_label_sphere_power"
                        app:suffixText="@string/transposition_unit_sphere_power">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ft_tiet_plus_cylinder_sphere_power"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned|numberDecimal"
                            android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ft_til_plus_cylinder_cylinder_power"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_til_plus_cylinder_sphere_power"
                        app:layout_constraintStart_toEndOf="@id/ft_cb_plus_cylinder_enabled"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/global_margin_full"
                        android:hint="@string/transposition_label_cylinder_power"
                        app:suffixText="@string/transposition_unit_cylinder_power">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ft_tiet_plus_cylinder_cylinder_power"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned|numberDecimal"
                            android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ft_til_plus_cylinder_cylinder_axis"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_til_plus_cylinder_cylinder_power"
                        app:layout_constraintStart_toEndOf="@id/ft_cb_plus_cylinder_enabled"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/global_margin_full"
                        android:hint="@string/transposition_label_axis"
                        app:prefixText="@string/transposition_unit_axis">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ft_tiet_plus_cylinder_cylinder_axis"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ft_mcv_cross_cylinder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_margin_full"
                android:layout_marginEnd="@dimen/global_margin_full"
                android:layout_marginStart="@dimen/global_margin_full"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ft_cl_cross_cylinder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/global_margin_full">

                    <TextView
                        android:id="@+id/ft_tv_cross_cylinder_title"
                        android:textAppearance="@style/TextAppearance.Lens.Overline"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:paddingBottom="@dimen/global_margin_full"
                        android:text="@string/transposition_cross_cylinder_title"
                        android:textColor="@color/color_on_surface_low" />

                    <CheckBox
                        android:id="@+id/ft_cb_cross_cylinder_enabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_tv_cross_cylinder_title"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ft_til_cross_cylinder_cylinder_power_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_tv_cross_cylinder_title"
                        app:layout_constraintStart_toEndOf="@id/ft_cb_cross_cylinder_enabled"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:hint="@string/transposition_label_cylinder_power"
                        app:suffixText="@string/transposition_unit_cylinder_power">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ft_tiet_cross_cylinder_cylinder_power_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned|numberDecimal"
                            android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ft_til_cross_cylinder_cylinder_axis_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_til_cross_cylinder_cylinder_power_1"
                        app:layout_constraintStart_toEndOf="@id/ft_cb_cross_cylinder_enabled"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/global_margin_full"
                        android:hint="@string/transposition_label_axis"
                        app:prefixText="@string/transposition_unit_axis">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ft_tiet_cross_cylinder_cylinder_axis_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ft_til_cross_cylinder_cylinder_power_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_til_cross_cylinder_cylinder_axis_1"
                        app:layout_constraintStart_toEndOf="@id/ft_cb_cross_cylinder_enabled"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/global_margin_full"
                        android:hint="@string/transposition_label_cylinder_power"
                        app:suffixText="@string/transposition_unit_cylinder_power">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ft_tiet_cross_cylinder_cylinder_power_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned|numberDecimal"
                            android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ft_til_cross_cylinder_cylinder_axis_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ft_til_cross_cylinder_cylinder_power_2"
                        app:layout_constraintStart_toEndOf="@id/ft_cb_cross_cylinder_enabled"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/global_margin_full"
                        android:hint="@string/transposition_label_axis"
                        app:prefixText="@string/transposition_unit_axis">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ft_tiet_cross_cylinder_cylinder_axis_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/ft_btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transposition_submit_title"
                android:layout_margin="@dimen/global_margin_full"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>

</layout>